--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -69,7 +69,7 @@
                         <div class="form-group">
                             <input type="number" min="0.01" step="0.01" class="form-control" id="addCharityAmount" name="amount" placeholder="Initial Donation" required>
           </div>
-                            <div id="addCharityInfo" class="alert alert-danger d-none" role="alert"></div>
+                            <div id="addCharityInfo" class="alert alert-danger" style="display:none;" role="alert"></div>
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-success px-4">Add</button>
@@ -110,3 +110,4 @@
             </div>
         </div>
     </div>
+    <!-- ADD DONATION MODAL END -->
